--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "transform": {
+      "\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
   "dependencies": {
     "jest": "^27.4.3"
   }
